upgrade to Ruby 2.6.0 and Sphinx 3

--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -5,7 +5,7 @@ indexer
 
 searchd
 {
-  listen = localhost:9312:mysql41
+  listen = 127.0.0.1:9312:mysql41
   log = /Users/fail/src/icewhistle/log/development.searchd.log
   query_log = /Users/fail/src/icewhistle/log/development.searchd.query.log
   pid_file = /Users/fail/src/icewhistle/log/development.sphinx.pid
@@ -21,7 +21,7 @@ source crumble_core_0
   sql_pass = 
   sql_db = icewhistle
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `crumbles`.`id` * 4 + 0 AS `id`, `crumbles`.`title` AS `title`, `crumbles`.`description` AS `description`, `crumbles`.`id` AS `sphinx_internal_id`, 'Crumble' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, UNIX_TIMESTAMP(`crumbles`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`crumbles`.`updated_at`) AS `updated_at` FROM `crumbles` WHERE (`crumbles`.`id` BETWEEN $start AND $end) GROUP BY `crumbles`.`id`, `crumbles`.`title`, `crumbles`.`description`, `crumbles`.`id`, `crumbles`.`created_at`, `crumbles`.`updated_at`  ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `crumbles`.`id` * 4 + 0 AS `id`, `crumbles`.`title` AS `title`, `crumbles`.`description` AS `description`, `crumbles`.`id` AS `sphinx_internal_id`, 'Crumble' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, UNIX_TIMESTAMP(`crumbles`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`crumbles`.`updated_at`) AS `updated_at` FROM `crumbles` WHERE (`crumbles`.`id` BETWEEN $start AND $end) GROUP BY `crumbles`.`id`, `crumbles`.`title`, `crumbles`.`description`, `crumbles`.`id`, `crumbles`.`created_at`, `crumbles`.`updated_at` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`crumbles`.`id`), 1), IFNULL(MAX(`crumbles`.`id`), 1) FROM `crumbles`
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -46,7 +46,7 @@ source post_core_0
   sql_pass = 
   sql_db = icewhistle
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `posts`.`id` * 4 + 1 AS `id`, `posts`.`title` AS `title`, `posts`.`body` AS `body`, `posts`.`extended` AS `extended`, `posts`.`id` AS `sphinx_internal_id`, 'Post' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, UNIX_TIMESTAMP(`posts`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`posts`.`updated_at`) AS `updated_at` FROM `posts` WHERE (`posts`.`id` BETWEEN $start AND $end) GROUP BY `posts`.`id`, `posts`.`title`, `posts`.`body`, `posts`.`extended`, `posts`.`id`, `posts`.`created_at`, `posts`.`updated_at`  ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `posts`.`id` * 4 + 1 AS `id`, `posts`.`title` AS `title`, `posts`.`body` AS `body`, `posts`.`extended` AS `extended`, `posts`.`id` AS `sphinx_internal_id`, 'Post' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, UNIX_TIMESTAMP(`posts`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`posts`.`updated_at`) AS `updated_at` FROM `posts` WHERE (`posts`.`id` BETWEEN $start AND $end) GROUP BY `posts`.`id`, `posts`.`title`, `posts`.`body`, `posts`.`extended`, `posts`.`id`, `posts`.`created_at`, `posts`.`updated_at` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`posts`.`id`), 1), IFNULL(MAX(`posts`.`id`), 1) FROM `posts`
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
